# finance

./: 000422.csv  ASCII_Judge_Input.csv  ASCII_Judge_Result.csv  CMakeLists.txt  CSV_Analysis.csv  CSV_Computed.csv  CSV_Debugging_Analysis_Prob.csv  CSV_Debugging_Statistic_Count.csv  CSV_Debugging_Statistic_Prob.csv  CSV_Field_Name_Seq_CH_zh_GB18030.csv  Fin_Algorithm.c  Fin_Algorithm.h  Fin_Analysis_Function.c  Fin_Analysis_Function.h  Fin_Header.c  Fin_Header.h  Fin_Jupyter_Notebook_Debugging.ipynb  Fin_Py_Clipboard_Founction.py  Fin_Py_Col_Recombination.py  Fin_Py_Regex_Dic.py  Fin_Py_Regex_Function.py  Fin_Statistics_Function.c  Fin_Statistics_Function.h  Fin_String_Function.c  Fin_String_Function.h  Fin_Struct_Function.c  Fin_Struct_Function.h  Fin_Text_Function.c  Fin_Text_Function.h  Fin_Time_Function.c  Fin_Time_Function.h  Py3_Jupyter_Nb_Pandas(股票同比分析)_GF_2024-01-16.ipynb  Py3_Jupyter_Nb_Pandas(金融Backtest工具测试)_GF_2024-01-20.ipynb  Py3_Jupyter_Nb_Pandas(金融Comprehensive分析)_GF_2024-01-22.ipynb  Py3_Jupyter_Nb_Pandas(金融MACD指标分析)_GF_2024-01-16.ipynb  Py3_Jupyter_Nb_Pandas(金融RSI指标分析)_GF_2024-01-22.ipynb  Py3_Script_Finance_Tools_Func.py  README.md  main.c
DEV_API_CALLING_20251125/: APP_API_Call_Configuration.json  APP_API_Call_Tushare_Stocks_Data_to_PGSQL.py  DEV_API_Call_Tushare_Stocks_Data_to_PGSQL16.ipynb  PY3_API_Call_Tushare1424_Stocks_Data_to_PGSQL16.py  PY3_PostgreSQL9_By_SQLAlchemy2.py
DEV_FINANCE_CALCULATE_20251125/: APP_Finance_Calculate_Configuration.json  APP_Stocks_DataFrame_Calculator.py  DEV_Stocks_Data_Calculate_Based_on_Daily_001_Thread.ipynb  (+3 more)
(+50 files in other folders)
